<resources>

    <string name="inputMessageString">ВВЕДИТЕ СООБЩЕНИЕ</string>
    <string name="sendMessageButtonString">ОТПРАВИТЬ</string>
    <string name="backButtonString">НАЗАД</string>
    <string name="ondestroy">onDestroy()</string>
    <string name="onstop">onStop()</string>
    <string name="onpause">onPause()</string>
    <string name="onresume">onResume()</string>
    <string name="onstart">onStart()</string>
    <string name="oncreate">onCreate()</string>
</resources>
