<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.piatr.firstapp.feature.ThirdActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/countTable"
        >
        <TableRow>
            <TextView
                android:id="@+id/activityOnCreate"
               android:text="@string/oncreate"
                />
            <TextView
                android:id="@+id/countOnCreate"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityOnStart"
                android:text="@string/onstart"
            />
            <TextView
                android:id="@+id/countOnStart"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityOnResume"
                android:text="@string/onresume"
                />
            <TextView
                android:id="@+id/countOnResume"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityOnPause"
                android:text="@string/onpause"
                />
            <TextView
                android:id="@+id/countOnPause"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityOnStop"
                android:text="@string/onstop"
                />
            <TextView
                android:id="@+id/countOnStop"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activityOnDestroy"
                android:text="@string/ondestroy"
                />
            <TextView
                android:id="@+id/countOnDestroy"
                />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/backButtonString"
        android:onClick="back"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/countTable"
        />

</android.support.constraint.ConstraintLayout>
